# JsonTalkiePlayer

./: CMakeLists.txt  README.md  main.cpp  talkie_esp32_light.json  talkie_nano_run_buzz.json  test_talkie.bat
include/: JsonMidiPlayer.hpp  JsonMidiPlayer_ctypes.hpp  JsonTalkiePlayer.hpp  JsonTalkiePlayer_ctypes.hpp
src/: JsonMidiPlayer.cpp  JsonMidiPlayer_ctypes.cpp  JsonTalkiePlayer.cpp  JsonTalkiePlayer_ctypes.cpp
